--- a/PreguntasFrecuentes/PreguntasFrecuentes.css
+++ b/PreguntasFrecuentes/PreguntasFrecuentes.css
@@ -97,3 +97,286 @@ div {
   position: relative;
   bottom: 125px;
 }
+
+#header{
+  position:fixed;
+  background-color: rgba(108, 108, 106, 0.5);
+  margin: 0 auto;
+  z-index: 999;
+}
+
+#header .logo-name{
+  display: none;
+}
+
+#header .logo-left{
+  position:absolute;
+  width:60px;
+  height: 60px;
+  opacity:1;
+  left: 30px;
+  top: 0px;
+  padding: 0;
+}
+
+#header .logo-right{
+  position:absolute;
+  width:60px;
+  height: 60px;
+  opacity:1;
+  right: 30px;
+  top: 0px;
+  padding: 0;
+}
+
+#header .nav{
+  position: relative;
+  padding-top: 20px;
+}
+
+#header .dropdown{
+  display:none;
+}
+
+#header ul li{
+  display: inline;
+  align-items: center;
+  padding-right: 10px;
+  padding-top: 20px;
+}
+
+#header ul li a{
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: white;
+}
+
+.fas{
+  color: white;
+}
+
+#main{
+  position: relative;
+  background-image: url("../img/carrito.jpg");
+  padding: 0px;
+  height: 600px;
+  width:100%;
+  margin:0 auto;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+#main h1{
+  font-family: 'Raleway', monospace;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+
+.feature_divider {
+    border: solid 2px;
+    display: block;
+    width: 100px;
+    margin: 10px auto;
+    border-color: black;
+}
+
+.products{
+background-color: rgba(253, 253, 253,0.7);
+padding: 30px;
+}
+
+.products h2{
+  font-size: 18px;
+  font-family: Raleway,monospace;
+  text-transform: uppercase;
+}
+
+.products .detalle img{
+width:150px;
+height: 150px;
+}
+
+.products .detalle ul li{
+  list-style: none;
+}
+
+.detalle{
+  display: flex;
+}
+
+.product-name{
+  font-family: 'Nanum Gothic', monospace;
+  text-transform: capitalize;
+  color: #08DDF7;
+  font-size: 15px;
+}
+
+.description{
+  font-family: Nanum Gothic, monospace;
+  text-transform: capitalize;
+  color: black;
+  font-size: 15px;
+  font-weight: 900;
+}
+
+.total{
+  background-color: rgba(253, 253, 253,0.7);
+  padding: 30px;
+}
+
+.total h2{
+  font-size: 18px;
+  font-family: Raleway,monospace;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+.total p{
+  font-size: 18px;
+  font-family: Raleway,monospace;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: red;
+}
+
+.total button{
+  background-color: #D4AF37;
+  font-family: Nanum Gothic, monospace;
+  font-size: 15px;
+  color: white;
+  text-transform: uppercase;
+  padding: 10px;
+
+}
+
+#footer{
+  background-color: grey;
+  font-family: "Raleway", monospace;
+  color: black;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin: 0 auto;
+}
+
+#footer ul li{
+  display: inline;
+  padding-right: 10px;
+}
+
+#footer p{
+  margin-bottom: 0px;
+}
+
+#footer a{
+  margin-bottom: 0px;
+  font-family: "Raleway", monospace;
+  color: black;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin: 0 auto;
+}
+
+
+.footer-social ul{
+  padding:0px;
+  margin:0 auto;
+}
+
+.footer-legal ul{
+  padding:0px;
+  margin:0 auto;
+}
+
+
+.fab {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fab:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  color: white;
+}
+.fa-twitter-square {
+  color: white;
+}
+.fa-instagram {
+  color: white;
+}
+
+.fa-cc-visa {
+  color: white;
+}
+
+.fa-cc-mastercard {
+  color: white;
+}
+
+.fa-cc-amex {
+  color: white;
+}
+.fa-cc-paypal {
+  color: white;
+}
+
+@media screen and (max-width: 600px){
+
+.nav{
+    display: none;
+}
+.logo-left, .logo-right{
+    display: none;
+}
+
+#header{
+  display: flex;
+  justify-content: space-between;
+}
+
+#header .dropdown{
+  display: contents;
+}
+
+#header .logo-name{
+  display: inline;
+  width:100px;
+  height: 40px;
+  opacity:1;
+  right: 30px;
+  top: 0px;
+  padding: 0;
+  margin: 20px;
+}
+
+.dropdown button{
+  font-family: Raleway, sans-serif;
+  text-transform: uppercase;
+  border: 2px solid white;
+  height: 40px;
+  margin-top: 20px;
+}
+
+.dropdown-menu{
+  background-color: grey;
+}
+.dropdown-item{
+  font-family: Raleway, sans-serif;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: white;
+}
+
+.icons .imagen{
+  max-height: 120px;
+  max-width: 120px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
