--- a/PerfilDeUsuario/css/Perfil.css
+++ b/PerfilDeUsuario/css/Perfil.css
@@ -1,160 +1,152 @@
-.body {
-  background-color: rgb(244, 244, 244);
+#falsoheader {
   position: relative;
+  width: 50%;
+  height: 500px;
+  background-color: #82CAFC;
+  margin-left: 30px;
+  box-shadow: 1px 1px 10px #666;
 }
 
-.logo {
+#foto {
+  border-radius: 200px 200px 200px 200px;
+  width: 250px;
   position: relative;
-  bottom: 300px;
-left: 850px;
+  left: 340px;
+  top: 90px;
 }
 
-h1 {
-position: relative;
-bottom: 190px;
-left: 280px;
-font-family: 'Raleway', sans-serif;
-font-size: 36px;
-z-index: 1;
-margin: 0 auto;
+#nombre {
+ font-family: 'Raleway', sans-serif;
+ position: relative;
+ top: 100px;
+ left: 387px;
+ color: white;
+ z-index: 5;
 }
 
-.menu li {
+#nacionalidad {
+ font-family: 'Raleway', sans-serif;
+ font-size: 18px;
+ position: relative;
+ top: 90px;
+ left: 420px;
+ color: white;
+ z-index: 6;
+}
+
+#menu {
+  float: left;
+  margin-left: 20px;
+  text-decoration: none;
+  display: block;
   position: relative;
-  display: inline-block;
-  bottom: 110px;
-  right: 35px;
-  padding: 10px;
-  font-size: 24px;
+  top: 130px;
+  right: 40px;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  font-size: 22px;
 }
 
-h3 {
+#informacion {
   position: relative;
   top: 25px;
-  left: 35px;
-  font-size: 16px;
-  z-index: 1;
-  margin: 0 auto;
-}
-.falsoheader {
-  background-color: #fff;
-  padding: 0;
-  height: 200px;
-  width: 1700px;
-  position: relative;
-  bottom: 150px;
-  margin: 0;
-  z-index: 0;
+  text-decoration: none;
+  line-height: 50px;
+  display: block;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  color: #82CAFC;
   margin: 0 auto;
 }
 
-.icono {
-  position: relative;
-  bottom: 70px;
-  left: 55px;
-  z-index: 1;
-}
-
-.circulofondo {
-  position: relative;
-  bottom: 65px;
-  right: 150px;
-  z-index: 0;
-}
-
-.separador {
-  background-color: rgb(205, 205, 205);
-  position: relative;
-  bottom: 180px;
-  left: 130px;
-  width: 1400px;
-  height: 1px;
-  z-index: 2;
-  margin: 0 auto;
+#datos {
+ position: relative;
+ bottom: 193px;
+ left: 170px;
+ text-decoration: none;
+ line-height: 50px;
+ display: block;
+ font-family: 'Raleway', sans-serif;
+ font-size: 20px;
+ color: black;
+ margin: 0 auto;
 }
 
 .informacion {
-  background-color: #fff;
-  height: 260px;
-  width: 950px;
   position: relative;
-  bottom: 150px;
-  z-index: 0;
+  width: 50%;
+  height: 250px;
+  background-color: white;
+  box-shadow: 1px 1px 10px #666;
+  margin-left: 30px;
   margin-top: 20px;
-  margin-left: 95px;
 }
 
-.separador2 {
-  background-color: rgb(205, 205, 205);
+h3 {
+ font-family: 'Raleway', sans-serif;
+ font-size: 22px;
+ position: relative;
+ top: 165px;
+ left: 400px;
+ color: white;
+ z-index: 6;
+}
+
+.fusion {
   position: relative;
-  top: 35px;
-  right: 60px;
-  width: 800px;
-  height: 1px;
-  z-index: 2;
-  margin-left: 95px;
+  width: 865px;
+  height: 200px;
+  float: right;
+  background-color: #82CAFC;
+  bottom: 774px;
+  margin: 0 auto;
+  margin-right: 30px;
+  box-shadow: 1px 1px 10px #666;
 }
 
-.ficha {
-  text-decoration: none;
-  line-height : 30px;
-  list-style: none;
-  margin-top: 50px;
-  margin-bottom: 0 auto;
-}
-
-.Contacto {
-  background-color: #fff;
-  height: 150px;
-  width: 725px;
+.londres {
   position: relative;
-  bottom: 430px;
-  left: 1070px;
-  z-index: 0;
-  margin-top: 20px;
+  left: 1010px;
+  bottom: 550px;
+  width: 860px;
+  height: 550px;
+  background-color: wh;
+  box-shadow: 1px 1px 10px #666;
+}
+
+#viaje1 {
+  position: relative;
+  width: 860px;
+  z-index: 5;
 }
 
 h4 {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-size: 48px;
   position: relative;
-  top: 25px;
-  left: 35px;
-  font-size: 16px;
-  z-index: 1;
-  margin: 0 auto;
+  bottom: 90px;
+  z-index: 8;
+  margin-left: 15px;
 }
 
-.separador3 {
-  background-color: rgb(205, 205, 205);
-  position: relative;
-  top: 35px;
-  right: 60px;
-  width: 600px;
-  height: 1px;
-  z-index: 2;
-  margin-left: 95px;
+h5 {
+ color: white;
+ font-family: 'Raleway', sans-serif;
+ font-size: 25px;
+ position: relative;
+ bottom: 104px;
+ z-index: 8;
+ margin-left: 18px;
 }
 
-
-.textoEmail {
-  margin: 0 auto;
-  position: relative;
-  top: 65px;
-  left: 35px;
-}
-
-.Contraseña {
-  background-color: #fff;
-  height: 150px;
-  width: 950px;
-  position: relative;
-  bottom: 485px;
-  z-index: 0;
-  margin-top: 20px;
-  margin-left: 95px;
-}
-
-.textopass {
-  margin-top: 50px;
-  margin-bottom: 0 auto;
-  margin-left: 35px;
+h6 {
+ color: white;
+ font-family: 'Raleway', sans-serif;
+ font-size: 26px;
+ position: relative;
+ bottom: 145px;
+ left: 580px;
+ z-index: 8;
+ margin-left: 18px;
 }
