--- a/contacto/css/contacto.css
+++ b/contacto/css/contacto.css
@@ -1,111 +1,119 @@
-form {
-  margin-left: 25px;
-  margin-top: 100px;
-}
-
-h1 {
-  margin-left: 25px;
-  position: relative;
-  top: 70px;
-}
-
-p {
-  margin-left: 25px;
-  position: relative;
-  top: 70px;
-}
-
-#main{
-  position: relative;
-  background-image: url("../img/carrito.jpg");
-  padding: 0px;
-  height: 600px;
+img {
   width:100%;
-  margin:0 auto;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
 }
 
-#main h1{
-  font-family: 'Raleway', monospace;
-  font-size: 25px;
-  text-transform: uppercase;
+.frase {
+  font font-family: 'Raleway', monospace;
+  font-size: 60px;
+  color: White;
+  text-align: center;
+  z-index: 1500;
+  position: relative;
+  bottom: 350px;
 }
 
-.feature_divider {
-    border: solid 2px;
-    display: block;
-    width: 100px;
-    margin: 10px auto;
-    border-color: black;
+.hablemos {
+  text-align: center;
+  position: relative;
+  bottom: 100px;
 }
 
-.products{
-background-color: rgba(253, 253, 253,0.7);
-padding: 30px;
+hr {
+  border: solid 2px;
+  display: block;
+  width: 70px;
+  margin: 0 auto;
+  border-color: #D4AF37;
+  position: relative;
+  bottom: 100px;
 }
 
-.products h2{
-  font-size: 18px;
-  font-family: Raleway,monospace;
-  text-transform: uppercase;
+h3 {
+  font-size: 24px;
+  margin-left: 50px;
+  position: relative;
+  top: 40px;
 }
 
-.products .detalle img{
-width:150px;
-height: 150px;
+h4 {
+  font-size: 20px;
+  margin-left: 50px;
+  position: relative;
+  top: 50px;
 }
 
-.products .detalle ul li{
-  list-style: none;
+form {
+  position: relative;
+  bottom: 80px;
+  left: 750px;
+  display: block;
+  margin-left: 150px;
 }
 
-.detalle{
-  display: flex;
+.nombre {
+  position: relative;
+  bottom: 30px;
+  left: 67px;
+  font-family: Raleway;
 }
 
-.product-name{
-  font-family: 'Nanum Gothic', monospace;
-  text-transform: capitalize;
-  color: #08DDF7;
-  font-size: 15px;
+#email {
+  position: relative;
+  bottom: 30px;
+  left: 54px;
+  font-family: Raleway;
 }
 
-.description{
-  font-family: Nanum Gothic, monospace;
-  text-transform: capitalize;
-  color: black;
-  font-size: 15px;
-  font-weight: 900;
+.email {
+ position: relative;
+ bottom: 35px;
+ left: 450px;
 }
 
-.total{
-  background-color: rgba(253, 253, 253,0.7);
-  padding: 30px;
+#mensaje {
+  position: relative;
+  bottom: 85px;
+  left: 67px;
+  font-family: Raleway;
+  margin: 0 auto;
 }
 
-.total h2{
-  font-size: 18px;
-  font-family: Raleway,monospace;
-  text-transform: uppercase;
-  font-weight: bolder;
+.mensaje {
+  position: relative;
+  top: 25px;
+  width: 1500px;
 }
 
-.total p{
-  font-size: 18px;
-  font-family: Raleway,monospace;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: red;
+#msj {
+  height: 100px;
+  width: 825px;
+  margin: 0 auto;
+  position: relative;
+  bottom: 15px;
 }
 
-.total button{
-  background-color: #D4AF37;
-  font-family: Nanum Gothic, monospace;
-  font-size: 15px;
-  color: white;
-  text-transform: uppercase;
-  padding: 10px;
+button {
+  position: relative;
+  left: 970px;
+  bottom: 50px;
+}
 
+.direccion {
+  position: relative;
+  bottom: 395px;
+  margin-left: 50px;
+  width: 320px;
+  height: 380px;
+  background-color: White;
+  text-align: center;
+  z-index: 1;
+}
+
+h5 {
+  font-size: 32px;
+}
+
+h5, p {
+  position: relative;
+  top: 50px;
 }
