--- a/login/css/login.css
+++ b/login/css/login.css
@@ -11,8 +11,13 @@
 
 .form label{
   text-transform: uppercase;
-  font-family: Nanum Gothic, monospace;
+  font-family: 'Nanum Gothic', monospace;
   font-size: 15px;
   color: white;
   font-weight: bolder;
+}
+
+#olvidado .clolvidado{
+  text-decoration: none;
+  color: white;
 }
