--- a/PerfilDeUsuario/css/Perfil.css
+++ b/PerfilDeUsuario/css/Perfil.css
@@ -1,21 +1,19 @@
-#falsoheader {
+.falsoheader {
   position: relative;
-  width: 50%;
-  height: 500px;
+  height: 580px;
   background-color: #82CAFC;
-  margin-left: 30px;
-  box-shadow: 1px 1px 10px #666;
 }
 
-#foto {
+.foto {
   border-radius: 200px 200px 200px 200px;
   width: 250px;
   position: relative;
   left: 340px;
   top: 90px;
+  box-shadow: 1px 1px 10px #666;
 }
 
-#nombre {
+.nombre {
  font-family: 'Raleway', sans-serif;
  position: relative;
  top: 100px;
@@ -24,7 +22,7 @@
  z-index: 5;
 }
 
-#nacionalidad {
+.nacionalidad {
  font-family: 'Raleway', sans-serif;
  font-size: 18px;
  position: relative;
@@ -34,17 +32,28 @@
  z-index: 6;
 }
 
-#menu {
-  float: left;
-  margin-left: 20px;
-  text-decoration: none;
-  display: block;
+.viaje1 {
   position: relative;
-  top: 130px;
-  right: 40px;
-  font-family: 'Raleway', sans-serif;
-  color: white;
-  font-size: 22px;
+  width: 860px;
+  z-index: 5;
+  margin-top: 30px;
+  box-shadow: 1px 1px 10px #666;
+}
+
+.informacion {
+  position: relative;
+  width: 100%;
+  height: 250px;
+  background-color: white;
+  box-shadow: 1px 1px 10px #666;
+  margin-top: 20px;
+}
+
+.londres {
+  position: relative;
+  height: 580px;
+  background-color: #82CAFC;
+
 }
 
 #informacion {
@@ -72,81 +81,38 @@
  margin: 0 auto;
 }
 
-.informacion {
-  position: relative;
-  width: 50%;
-  height: 250px;
-  background-color: white;
-  box-shadow: 1px 1px 10px #666;
-  margin-left: 30px;
-  margin-top: 20px;
-}
-
 h3 {
- font-family: 'Raleway', sans-serif;
- font-size: 22px;
- position: relative;
- top: 165px;
- left: 400px;
- color: white;
- z-index: 6;
-}
-
-.fusion {
+  color: white;
   position: relative;
-  width: 865px;
-  height: 200px;
-  float: right;
-  background-color: #82CAFC;
-  bottom: 774px;
-  margin: 0 auto;
-  margin-right: 30px;
-  box-shadow: 1px 1px 10px #666;
-}
-
-.londres {
-  position: relative;
-  left: 1010px;
-  bottom: 550px;
-  width: 860px;
-  height: 550px;
-  background-color: wh;
-  box-shadow: 1px 1px 10px #666;
-}
-
-#viaje1 {
-  position: relative;
-  width: 860px;
-  z-index: 5;
+  bottom: 475px;
+  z-index: 999;
+  font-size: 26px;
+  margin-left: 20px;
 }
 
 h4 {
   color: white;
-  font-family: 'Raleway', sans-serif;
-  font-size: 48px;
   position: relative;
-  bottom: 90px;
-  z-index: 8;
-  margin-left: 15px;
+  bottom: 156px;
+  z-index: 999;
+  font-size: 40px;
+  margin-left: 20px;
 }
 
 h5 {
- color: white;
- font-family: 'Raleway', sans-serif;
- font-size: 25px;
- position: relative;
- bottom: 104px;
- z-index: 8;
- margin-left: 18px;
+  color: white;
+  position: relative;
+  bottom: 166px;
+  z-index: 999;
+  font-size: 24px;
+  margin-left: 20px;
 }
 
 h6 {
- color: white;
- font-family: 'Raleway', sans-serif;
- font-size: 26px;
- position: relative;
- bottom: 145px;
- left: 580px;
- z-index: 8;
- margin-left: 18px;
+  color: white;
+  position: relative;
+  bottom: 169px;
+  z-index: 999;
+  font-size: 18px;
+  margin-left: 20px;
 }
