--- a/PerfilDeUsuario/css/Perfil.css
+++ b/PerfilDeUsuario/css/Perfil.css
@@ -1,118 +1,49 @@
 .falsoheader {
-  position: relative;
   height: 580px;
+  width: 100%;
   background-color: #82CAFC;
 }
 
 .foto {
+  padding-top: 150px;
   border-radius: 200px 200px 200px 200px;
   width: 250px;
-  position: relative;
-  left: 340px;
-  top: 90px;
   box-shadow: 1px 1px 10px #666;
+  display: block;
+  margin: 0 auto;
+  background-color: white;
 }
 
 .nombre {
  font-family: 'Raleway', sans-serif;
- position: relative;
- top: 100px;
- left: 387px;
+ text-align: center;
  color: white;
  z-index: 5;
 }
 
 .nacionalidad {
  font-family: 'Raleway', sans-serif;
- font-size: 18px;
- position: relative;
- top: 90px;
- left: 420px;
+ font-size: 24px;
+ text-align: center;
  color: white;
  z-index: 6;
 }
 
-.viaje1 {
-  position: relative;
-  width: 860px;
-  z-index: 5;
-  margin-top: 30px;
-  box-shadow: 1px 1px 10px #666;
-}
-
-.informacion {
-  position: relative;
+.div2 {
   width: 100%;
   height: 250px;
   background-color: white;
   box-shadow: 1px 1px 10px #666;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.londres {
-  position: relative;
-  height: 580px;
-  background-color: #82CAFC;
-
-}
-
-#informacion {
-  position: relative;
-  top: 25px;
+.informacion {
+  margin-top: 26px;
   text-decoration: none;
-  line-height: 50px;
+  line-height: 30px;
   display: block;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
   color: #82CAFC;
-  margin: 0 auto;
-}
-
-#datos {
- position: relative;
- bottom: 193px;
- left: 170px;
- text-decoration: none;
- line-height: 50px;
- display: block;
- font-family: 'Raleway', sans-serif;
- font-size: 20px;
- color: black;
- margin: 0 auto;
-}
-
-h3 {
-  color: white;
-  position: relative;
-  bottom: 475px;
-  z-index: 999;
-  font-size: 26px;
-  margin-left: 20px;
-}
-
-h4 {
-  color: white;
-  position: relative;
-  bottom: 156px;
-  z-index: 999;
-  font-size: 40px;
-  margin-left: 20px;
-}
-
-h5 {
-  color: white;
-  position: relative;
-  bottom: 166px;
-  z-index: 999;
-  font-size: 24px;
-  margin-left: 20px;
-}
-
-h6 {
-  color: white;
-  position: relative;
-  bottom: 169px;
-  z-index: 999;
-  font-size: 18px;
-  margin-left: 20px;
 }
