--- a/admin/css/ABM.css
+++ b/admin/css/ABM.css
@@ -1,14 +1,17 @@
 body{
   height: 100%;
 }
-
 #main{
-  min-height: 650px;
+    min-height: 555px;
 }
-
+#mainDel{
+  min-height: 580px;
+}
 #main img{
   object-fit: cover;
+
 }
 #main a{
   color: black;
+
 }
