--- a/carrito/CSS/carrito1.css
+++ b/carrito/CSS/carrito1.css
@@ -85,11 +85,13 @@ height: 150px;
 }
 
 .total button{
-  background-color: #D4AF37;
+  background-color:#CFB53B;
   font-family: Nanum Gothic, monospace;
   font-size: 15px;
   color: white;
   text-transform: uppercase;
   padding: 10px;
+  border-radius: 25px;
+  border: 1px solid white;
 
 }
