--- a/includes/general1.css
+++ b/includes/general1.css
@@ -53,6 +53,12 @@
   color: white;
 }
 
+#cart_count{
+  text-align: center;
+  padding:0 0.9rem 0.1rem 0.9rem;
+  border-radius: 3rem;
+}
+
 #footer{
   background-color: grey;
   font-family: "Raleway", sans-serif;
