--- a/login/css/login1.css
+++ b/login/css/login1.css
@@ -21,3 +21,14 @@
   text-decoration: none;
   color: white;
 }
+
+.btn-primary{
+  background-color:#CFB53B;
+  font-family: Nanum Gothic, monospace;
+  font-size: 13px;
+  color: white;
+  text-transform: uppercase;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid white;
+}
