--- a/register/css/allstyles.css
+++ b/register/css/allstyles.css
@@ -34,6 +34,14 @@ section {
 }
 #submitbottom{
   margin-bottom: 30px;
+  background-color:#CFB53B;
+  font-family: Nanum Gothic, monospace;
+  font-size: 13px;
+  color: white;
+  text-transform: uppercase;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid white;
 }
 
 .error{
