--- a/carrito/CSS/carrito2.css
+++ b/carrito/CSS/carrito2.css
@@ -84,14 +84,18 @@ height: 150px;
   color: red;
 }
 
-.total button{
+.total .btn-primary{
   background-color:#CFB53B;
   font-family: Nanum Gothic, monospace;
-  font-size: 15px;
+  font-size: 13px;
   color: white;
   text-transform: uppercase;
   padding: 10px;
-  border-radius: 25px;
+  border-radius: 10px;
   border: 1px solid white;
-
+}
+.btn-primary:hover{
+  background-color: white;
+  color: #CFB53B;
+  border-color: #CFB53B;
 }
