--- a/login/css/login2.css
+++ b/login/css/login2.css
@@ -32,3 +32,9 @@
   border-radius: 10px;
   border: 1px solid white;
 }
+
+.btn-primary:hover{
+  background-color: white;
+  color: #CFB53B;
+  border-color: #CFB53B;
+}
