--- a/Perfil/css/estiloperfil.css
+++ b/Perfil/css/estiloperfil.css
@@ -80,6 +80,12 @@ background: rgba(255,255,255, 0.8);
   padding: 10px;
   border-radius: 10px;
   border: 1px solid white;
+}
+.btn-primary:hover{
+  background-color: white;
+  color: #CFB53B;
+  border-color: #CFB53B;
+}
 
 @media only screen and (max-width: 600px) {
 
