--- a/includes/general2.css
+++ b/includes/general2.css
@@ -176,6 +176,7 @@
 
 #header #dropdown-small{
   display: contents;
+  background-color: transparent;
 }
 
 #header .logo-name{
@@ -195,8 +196,8 @@
   font-style: normal;
   font-size: 14px;
   text-transform: uppercase;
-  color: #ffffff;
-  border: 2px solid white;
+  color: white;
+  border: none;
   height: 40px;
   margin-top: 20px;
 }
@@ -221,5 +222,34 @@
   max-width: 120px;
   margin-bottom: 50px;
   margin-top: 50px;
+}
+
+.container1 {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.container1 .dropdown-toggle {
+  background-color: transparent;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 }
